Who We Are page - add expertise section - w\ adaptive.

--- a/dest/are.html
+++ b/dest/are.html
@@ -113,7 +113,176 @@
       <!-- SECTION expertise :: START-->
       <section class="expertise" id="expertise">
         <div class="c-grid">
-          <div class="expertise__wrapper"></div>
+          <h2 class="expertise__title c-title">AREAS OF EXPERTISE</h2>
+        </div>
+        <div class="expertise__wrapper expertise__wrapper-0">
+          <div class="c-grid">
+            <div class="swiper-container swiper-container-expertise">
+              <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-block-wrapper">
+                                <div class="swiper-slide-block swiper-slide-block-0">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-1">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Nanoscale materials</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-2">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Machine Learning</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-3">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Energy and Power systems</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-4">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-5">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Human factors</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-6">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Neurotechnology</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-7">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Robotics</span></div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-block-wrapper">
+                                <div class="swiper-slide-block swiper-slide-block-0">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-1">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Nanoscale materials</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-2">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Machine Learning</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-3">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Energy and Power systems</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-4">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-5">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Human factors</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-6">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Neurotechnology</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-7">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Robotics</span></div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-block-wrapper">
+                                <div class="swiper-slide-block swiper-slide-block-0">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-1">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Nanoscale materials</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-2">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Machine Learning</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-3">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Energy and Power systems</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-4">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-5">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Human factors</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-6">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Neurotechnology</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-7">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Robotics</span></div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="swiper-slide">
+                              <div class="swiper-slide-block-wrapper">
+                                <div class="swiper-slide-block swiper-slide-block-0">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-1">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Nanoscale materials</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-2">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Machine Learning</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-3">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Energy and Power systems</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-4">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Quantum Technologies</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-5">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Human factors</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-6">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Neurotechnology</span></div>
+                                </div>
+                                <div class="swiper-slide-block swiper-slide-block-7">
+                                  <div class="swiper-slide-block-top"></div>
+                                  <div class="swiper-slide-block-bottom"><span>Robotics</span></div>
+                                </div>
+                              </div>
+                            </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
+        </div>
+        <div class="c-grid">
+          <div class="expertise__wrapper expertise__wrapper-1">
+            <div class="are__block">
+              <div>
+                <div class="are__block-circle"><i></i></div>
+              </div>
+              <div><span>Communicate your insight from the frontiers of science</span></div>
+            </div>
+            <div class="are__block">
+              <div>
+                <div class="are__block-circle"><i></i></div>
+              </div>
+              <div><span>Put your subject matter expertise to work</span></div>
+            </div>
+          </div>
         </div>
       </section>
       <!-- SECTION expertise :: END-->
