Who We Are page - add work section - w\ adaptive.

--- a/dest/are.html
+++ b/dest/are.html
@@ -289,7 +289,86 @@
       <!-- SECTION work :: START-->
       <section class="work" id="work">
         <div class="c-grid">
-          <div class="work__wrapper"></div>
+          <div class="work__wrapper work__wrapper-0">
+            <h2 class="work__title work__title-0 c-title">INDUSTRY SECTORS WE WORK IN</h2>
+            <div class="work__row work__row-0">
+              <div class="work__row-left">
+                <div class="work__box work__box-0">
+                  <p class="work__box-title">ENTERPRISE R&D</p>
+                  <ul>
+                    <li>— Automotive</li>
+                    <li>— Defence & Aerospace</li>
+                    <li>— Chemicals</li>
+                    <li>— Consumer electronics</li>
+                    <li>— Energy & Mining</li>
+                    <li>— Telecoms, Computing</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="work__row-right">
+                <div class="work__box work__box-1">
+                  <p class="work__box-title">ADVISORY & INVESTING</p>
+                  <ul>
+                    <li>— Advisory and Consulting</li>
+                    <li>— Venture Capital</li>
+                  </ul>
+                </div>
+                <div class="work__box work__box-2">
+                  <p class="work__box-title">GOVERNMENT & OTHER</p>
+                  <div>
+                    <ul>
+                      <li>— Government and Universities</li>
+                      <li>— Gaming</li>
+                    </ul>
+                    <ul>
+                      <li>— Retail</li>
+                      <li>— Banking</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="work__row work__row-1">
+              <div class="are__block">
+                <div>
+                  <div class="are__block-circle"><i></i></div>
+                </div>
+                <div><span>Gain solid commercial experience to stand out from the crowd</span></div>
+              </div>
+              <div class="are__block">
+                <div>
+                  <div class="are__block-circle"><i></i></div>
+                </div>
+                <div><span>Hone your consulting and analytical skills</span></div>
+              </div>
+            </div>
+          </div>
+          <div class="work__wrapper work__wrapper-1">
+            <div class="work__row work__row-2">
+              <div class="work__row-left">
+                <h2 class="work__title work__title-1 c-title">WORK, ONLINE, <span class='c-title--color'>ANYTIME</span></h2>
+                <p class="work__desc">Choose what to get involved in based on what motivates you. Accept or decline projects as you wish, with no obligations.</p>
+                <div class="are__block">
+                  <div>
+                    <div class="are__block-circle"><i></i></div>
+                  </div>
+                  <div><span>Specialise in precisely the kind of work you enjoy most</span></div>
+                </div>
+                <div class="are__block">
+                  <div>
+                    <div class="are__block-circle"><i></i></div>
+                  </div>
+                  <div><span>Fit small tasks around your existing commitments</span></div>
+                </div>
+              </div>
+              <div class="work__row-right">
+                <div class="work__img work__img-0"></div>
+              </div>
+            </div>
+          </div>
+          <div class="work__wrapper work__wrapper-2">
+            <div class="work__img work__img-1"></div>
+          </div>
         </div>
       </section>
       <!-- SECTION work :: END-->
