Who We Are page - add main section - w\ adaptive.

--- a/dest/are.html
+++ b/dest/are.html
@@ -79,8 +79,19 @@
     <div class="body p-are">
       <!-- SECTION main :: START-->
       <section class="a-main" id="a-main">
+        <div class="a-main__bg">
+          <div class="a-main__bg-left"></div>
+          <div class="a-main__bg-right"><img src="./img/img-a-main-bg.png" srcset="./img/img-a-main-bg@2x.png 2x" alt="" title=""></div>
+        </div>
         <div class="c-grid">
-          <div class="a-main__wrapper"></div>
+          <div class="a-main__wrapper">
+            <div class="a-main__wrapper-left">
+              <h1 class="a-main__title c-title">TECHNOLOGY IS EVOLVING <br>AT <span class='c-title--color'>BREAKNECK SPEED</span></h1>
+              <p class="a-main__desc a-main__desc--pb">By bringing together multidisciplinary groups of scientists, online, we help R&D companies keep pace with the latest breakthrough technologies emerging from the lab.</p>
+              <p class="a-main__desc">We do this by mapping technology landscapes, tracking how they develop in real-time, and forecasting long term trends/future innovation.</p>
+            </div>
+            <div class="a-main__wrapper-right"></div>
+          </div>
         </div>
       </section>
       <!-- SECTION main :: END-->
