Who We Are page - add pixel perfect - w\ adaptive.

--- a/dest/are.html
+++ b/dest/are.html
@@ -97,9 +97,13 @@
       <!-- SECTION main :: END-->
       <!-- SECTION collective :: START-->
       <section class="collective" id="collective">
+        <div class="collective__bg">
+          <div class="collective__bg-left"><img src="./img/img-collective-pc.png" srcset="./img/img-collective-pc@2x.png 2x" alt="" title=""></div>
+          <div class="collective__bg-right"></div>
+        </div>
         <div class="c-grid">
           <div class="collective__wrapper">
-            <div class="collective__wrapper-left"><img src="./img/img-collective-pc.png" srcset="./img/img-collective-pc@2x.png 2x" alt="" title=""></div>
+            <div class="collective__wrapper-left"></div>
             <div class="collective__wrapper-right">
               <h2 class="collective__title c-title"><span class='c-title--color'>COLLECTIVE</span> INTELLIGENCE</h2>
               <p class="collective__desc collective__desc--pb">Almost all important problems are solved by groups of people rather than individuals alone. We believe that by working together in large teams we can deliver insight more intelligently, creatively and quickly than ever before possible.</p>
