Plain page - create sign/plaint section, add pixel perfect - w\ adaptive.

--- a/dest/plain.html
+++ b/dest/plain.html
@@ -76,7 +76,53 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body p-plain"></div>
+    <div class="body p-plain">
+      <!-- SECTION sign :: START-->
+      <section class="sign sign--plain" id="sign">
+        <div class="sign__bg">
+          <div class="sign__bg-left"></div>
+          <div class="sign__bg-right"></div>
+        </div>
+        <div class="c-grid">
+          <div class="sign__wrapper">
+            <div class="sign__wrapper-left">
+              <div>
+                <h2 class="sign__title c-title"><span class='c-title--color'>YOU’VE BEEN NOMINATED</span><br>BY JAMES GOOD</h2>
+                <p class="sign__heading">Be prepared, We’ll ask you for the following</p>
+                <div class="sign__box-wrapper">
+                  <div class="sign__box sign__box-0">
+                    <div>
+                      <div class="sign__box-circle"><span>1</span></div>
+                    </div>
+                    <div>
+                      <p>Your basic info and a bit about yourself</p>
+                    </div>
+                  </div>
+                  <div class="sign__box sign__box-1">
+                    <div>
+                      <div class="sign__box-circle"><span>2</span></div>
+                    </div>
+                    <div>
+                      <p>A photo of your passport or ID</p>
+                    </div>
+                  </div>
+                </div><a class="sign__btn c-btn c-btn--bg" href="#" title="">LET’S GO</a>
+                <p class="sign__info"><span>Your location may determine whether you can participate in projects. For more<br>information please read our&nbsp;<i>i</i></span><a href="#" title="">Our international working policy</a></p>
+              </div>
+            </div>
+            <div class="sign__wrapper-right">
+              <div>
+                <h2 class="sign__title c-title">WHERE DEEP SCIENCE<br>MEETS BUSINESS</h2>
+                <p class="sign__subtitle">Together, we help companies get smarter about the future impact of emerging technologies</p>
+                <p class="sign__desc">We are an invite-only network of the brightest minds spanning science, technology and engineering.</p>
+                <p class="sign__desc">Altogether, we constitute 1000s of postgraduate researchers, academics and alumni. A community of talented young scientists from world leading universities sharing a common goal - to understand how the global landscape is being shaped by science-driven innovation</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION sign :: END-->
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
