--- a/dest/apply-closed.html
+++ b/dest/apply-closed.html
@@ -76,7 +76,191 @@
       </div>
     </header>
     <!-- HEADER :: END-->
-    <div class="body p-apply"></div>
+    <div class="body p-apply">
+      <!-- SECTION sign :: START-->
+      <section class="sign sign--apply sign--closed" id="sign">
+        <div class="sign__bg">
+          <div class="sign__bg-left"></div>
+          <div class="sign__bg-right"></div>
+        </div>
+        <div class="c-grid">
+          <div class="sign__wrapper">
+            <div class="sign__wrapper-left">
+              <div>
+                <h2 class="sign__title c-title">Become an Associate</h2>
+                <p class="sign__subtitle">This platform is currently open to new applicants.<br>Apply before 7 January 2019</p>
+                <p class="sign__desc">If you're thinking of joining, pre-register your interest and we'll make sure you’re the first to hear when the platform is about to open, you’ll then be able to jump the queue and submit your application.</p>
+                <form class="c-form" action="" method="" autocomplete="off">
+                  <div class="c-form__group c-form__group--two">
+                    <div class="c-form__group-col c-form__group-col-0">
+                      <div class="c-form__field c-form__field--input">
+                        <label class="c-form__label" for="email">Email</label>
+                        <div class="c-form__input-wrapper">
+                          <input class="c-form__input" type="email" id="email" name="email" placeholder="Type your email" value="" input-js="input-js"/>
+                        </div>
+                        <div class="c-form__notify">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="c-form__group-col c-form__group-col-1">
+                      <div class="c-form__field c-form__field--input">
+                        <label class="c-form__label" for="password">Password</label>
+                        <div class="c-form__input-wrapper">
+                          <input class="c-form__input" type="password" id="password" name="password" placeholder="Type your password" value="" input-js="input-js"/>
+                        </div>
+                        <div class="c-form__notify">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="c-form__group c-form__group--two">
+                    <div class="c-form__group-col c-form__group-col-0">
+                      <div class="c-form__field c-form__field--select">
+                        <label class="c-form__label" for="select_status">Current Status</label>
+                        <div class="c-form__select-wrapper">
+                          <div class="c-form__select-value"></div>
+                          <select class="c-form__select" id="select_status" name="select_status" select-js="select-js">
+                            <option value="" disabled="disabled" selected="selected" hidden="hidden">Choose option</option>
+                            <option value="Some option 1">Some option 1</option>
+                            <option value="Some option 2">Some option 2</option>
+                            <option value="Some option 3">Some option 3</option>
+                          </select>
+                          <div class="c-form__select-icon"><i></i></div>
+                        </div>
+                        <div class="c-form__notify">
+                        </div>
+                      </div>
+                    </div>
+                    <div class="c-form__group-col c-form__group-col-1">
+                      <div class="c-form__field c-form__field--select">
+                        <label class="c-form__label" for="select_university">University</label>
+                        <div class="c-form__select-wrapper">
+                          <div class="c-form__select-value"></div>
+                          <select class="c-form__select" id="select_university" name="select_university" select-js="select-js">
+                            <option value="" disabled="disabled" selected="selected" hidden="hidden">Choose option</option>
+                            <option value="Some option 1">Some option 1</option>
+                            <option value="Some option 2">Some option 2</option>
+                            <option value="Some option 3">Some option 3</option>
+                          </select>
+                          <div class="c-form__select-icon"><i></i></div>
+                        </div>
+                        <div class="c-form__notify">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </form><a class="sign__btn c-btn c-btn--bg" href="#" title="">PRE-REGISTER NOW</a>
+                <div class="sign__wait">
+                  <p>Can’t wait?</p><span>The quickest way to beat the queue is to get nominated by a current Associate. If you know any Associates, buy them a drink and ask them for a nomination.</span>
+                </div>
+                <p class="sign__info"><span>Your location may determine whether you can participate in projects. For more<br>information please read our&nbsp;<i>i</i></span><a href="#" title="">Our international working policy</a></p>
+              </div>
+            </div>
+            <div class="sign__wrapper-right">
+              <div class="think__slider">
+                <div class="swiper-container swiper-container-apply">
+                  <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                      <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                      <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                      <div class="swiper-slide-user">
+                                        <div>
+                                          <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                        </div>
+                                        <div>
+                                          <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                        </div>
+                                      </div>
+                                      <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                      <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                      <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                      <div class="swiper-slide-user">
+                                        <div>
+                                          <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                        </div>
+                                        <div>
+                                          <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                        </div>
+                                      </div>
+                                      <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                      <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                      <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                      <div class="swiper-slide-user">
+                                        <div>
+                                          <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                        </div>
+                                        <div>
+                                          <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                        </div>
+                                      </div>
+                                      <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                      <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                      <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                      <div class="swiper-slide-user">
+                                        <div>
+                                          <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                        </div>
+                                        <div>
+                                          <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                        </div>
+                                      </div>
+                                      <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                      <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                      <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                      <div class="swiper-slide-user">
+                                        <div>
+                                          <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                        </div>
+                                        <div>
+                                          <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                        </div>
+                                      </div>
+                                      <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                      <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                      <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                      <div class="swiper-slide-user">
+                                        <div>
+                                          <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                        </div>
+                                        <div>
+                                          <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                        </div>
+                                      </div>
+                                      <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                    </div>
+                                    <div class="swiper-slide">
+                                      <p class="swiper-slide-title">Amazing way to earn cash</p>
+                                      <p class="swiper-slide-desc">It’s great that I can earn and build my CV at the same time, I don’t have a lot of time out of labs so being to work on projects in my spare time and from anyewhere is ideal for me .</p>
+                                      <div class="swiper-slide-user">
+                                        <div>
+                                          <div class="swiper-slide-circle"><img src="./img/mockupone.png" srcset="./img/mockupone@2x.png 2x" alt="" title=""></div>
+                                        </div>
+                                        <div>
+                                          <p>David Davidson</p><span>PHD Student, Bioengineering, Imperial College London</span>
+                                        </div>
+                                      </div>
+                                      <div class="swiper-slide-content"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+                                    </div>
+                  </div>
+                  <div class="swiper-pagination"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION sign :: END-->
+    </div>
     <!-- FOOTER :: START-->
     <footer class="footer" id="footer">
       <div class="c-grid">
