--- a/dest/apply.html
+++ b/dest/apply.html
@@ -89,86 +89,88 @@
               <div>
                 <h2 class="sign__title c-title">Become an Associate</h2>
                 <p class="sign__subtitle">This platform is currently open to new applicants.<br>Apply before 7 January 2019</p>
-                <form class="c-form" action="" method="" autocomplete="off">
-                  <div class="c-form__group c-form__group--two">
-                    <div class="c-form__group-col c-form__group-col-0">
-                      <div class="c-form__field c-form__field--input">
-                        <label class="c-form__label" for="email">Email</label>
-                        <div class="c-form__input-wrapper">
-                          <input class="c-form__input" type="email" id="email" name="email" placeholder="Type your email" value="" input-js="input-js"/>
+                <div class="sign__content">
+                  <form class="c-form" action="" method="" autocomplete="off">
+                    <div class="c-form__group c-form__group--two">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--input">
+                          <label class="c-form__label" for="email">Email</label>
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="email" id="email" name="email" placeholder="Type your email" value="" input-js="input-js"/>
+                          </div>
+                          <div class="c-form__notify">
+                          </div>
                         </div>
-                        <div class="c-form__notify">
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--input">
+                          <label class="c-form__label" for="password">Password</label>
+                          <div class="c-form__input-wrapper">
+                            <input class="c-form__input" type="password" id="password" name="password" placeholder="Type your password" value="" input-js="input-js"/>
+                          </div>
+                          <div class="c-form__notify">
+                          </div>
                         </div>
                       </div>
                     </div>
-                    <div class="c-form__group-col c-form__group-col-1">
-                      <div class="c-form__field c-form__field--input">
-                        <label class="c-form__label" for="password">Password</label>
-                        <div class="c-form__input-wrapper">
-                          <input class="c-form__input" type="password" id="password" name="password" placeholder="Type your password" value="" input-js="input-js"/>
+                    <div class="c-form__group c-form__group--two">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--select">
+                          <label class="c-form__label" for="select_status">Current Status</label>
+                          <div class="c-form__select-wrapper">
+                            <div class="c-form__select-value"></div>
+                            <select class="c-form__select" id="select_status" name="select_status" select-js="select-js">
+                              <option value="" disabled="disabled" selected="selected" hidden="hidden">Choose option</option>
+                              <option value="Some option 1">Some option 1</option>
+                              <option value="Some option 2">Some option 2</option>
+                              <option value="Some option 3">Some option 3</option>
+                            </select>
+                            <div class="c-form__select-icon"><i></i></div>
+                          </div>
+                          <div class="c-form__notify">
+                          </div>
                         </div>
-                        <div class="c-form__notify">
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--select">
+                          <label class="c-form__label" for="select_university">University</label>
+                          <div class="c-form__select-wrapper">
+                            <div class="c-form__select-value"></div>
+                            <select class="c-form__select" id="select_university" name="select_university" select-js="select-js">
+                              <option value="" disabled="disabled" selected="selected" hidden="hidden">Choose option</option>
+                              <option value="Some option 1">Some option 1</option>
+                              <option value="Some option 2">Some option 2</option>
+                              <option value="Some option 3">Some option 3</option>
+                            </select>
+                            <div class="c-form__select-icon"><i></i></div>
+                          </div>
+                          <div class="c-form__notify">
+                          </div>
                         </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="c-form__group c-form__group--two">
-                    <div class="c-form__group-col c-form__group-col-0">
-                      <div class="c-form__field c-form__field--select">
-                        <label class="c-form__label" for="select_status">Current Status</label>
-                        <div class="c-form__select-wrapper">
-                          <div class="c-form__select-value"></div>
-                          <select class="c-form__select" id="select_status" name="select_status" select-js="select-js">
-                            <option value="" disabled="disabled" selected="selected" hidden="hidden">Choose option</option>
-                            <option value="Some option 1">Some option 1</option>
-                            <option value="Some option 2">Some option 2</option>
-                            <option value="Some option 3">Some option 3</option>
-                          </select>
-                          <div class="c-form__select-icon"><i></i></div>
-                        </div>
-                        <div class="c-form__notify">
-                        </div>
+                  </form>
+                  <p class="sign__heading">Be prepared, We’ll ask you for the following</p>
+                  <div class="sign__box-wrapper">
+                    <div class="sign__box sign__box-0">
+                      <div>
+                        <div class="sign__box-circle"><span>1</span></div>
+                      </div>
+                      <div>
+                        <p>Your basic info and a bit about yourself</p>
                       </div>
                     </div>
-                    <div class="c-form__group-col c-form__group-col-1">
-                      <div class="c-form__field c-form__field--select">
-                        <label class="c-form__label" for="select_university">University</label>
-                        <div class="c-form__select-wrapper">
-                          <div class="c-form__select-value"></div>
-                          <select class="c-form__select" id="select_university" name="select_university" select-js="select-js">
-                            <option value="" disabled="disabled" selected="selected" hidden="hidden">Choose option</option>
-                            <option value="Some option 1">Some option 1</option>
-                            <option value="Some option 2">Some option 2</option>
-                            <option value="Some option 3">Some option 3</option>
-                          </select>
-                          <div class="c-form__select-icon"><i></i></div>
-                        </div>
-                        <div class="c-form__notify">
-                        </div>
+                    <div class="sign__box sign__box-1">
+                      <div>
+                        <div class="sign__box-circle"><span>2</span></div>
+                      </div>
+                      <div>
+                        <p>A photo of your passport or ID</p>
                       </div>
                     </div>
-                  </div>
-                </form>
-                <p class="sign__heading">Be prepared, We’ll ask you for the following</p>
-                <div class="sign__box-wrapper">
-                  <div class="sign__box sign__box-0">
-                    <div>
-                      <div class="sign__box-circle"><span>1</span></div>
-                    </div>
-                    <div>
-                      <p>Your basic info and a bit about yourself</p>
-                    </div>
-                  </div>
-                  <div class="sign__box sign__box-1">
-                    <div>
-                      <div class="sign__box-circle"><span>2</span></div>
-                    </div>
-                    <div>
-                      <p>A photo of your passport or ID</p>
-                    </div>
-                  </div>
-                </div><a class="sign__btn c-btn c-btn--bg" href="#" title="">LET’S GO</a>
-                <p class="sign__info"><span>Your location may determine whether you can participate in projects. For more<br>information please read our&nbsp;<i>i</i></span><a href="#" title="">Our international working policy</a></p>
+                  </div><a class="sign__btn c-btn c-btn--bg" href="#" title="">LET’S GO</a>
+                  <p class="sign__info"><span>Your location may determine whether you can participate in projects. For more <br>information please read our&nbsp;<i>i</i></span><a href="#" title="">Our international working policy</a></p>
+                </div>
               </div>
             </div>
             <div class="sign__wrapper-right">
