Footer - full adaptive.

--- a/dest/plain.html
+++ b/dest/plain.html
@@ -61,17 +61,24 @@
                   </g>
                 </g>
               </svg></a>
-          </div>
-          <div class="header__wrapper-middle">
-            <div class="nav nav--header">
-              <ul class="nav__list">
-                <li class="nav__list-item"><a class="nav__list-btn" href="/" title="">Home</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="do.html" title="">What we do</a></li>
-                <li class="nav__list-item"><a class="nav__list-btn" href="are.html" title="">Who we are</a></li>
-              </ul>
+            <div class="hamburger hamburger--squeeze" role="button" hamburger-js="hamburger-js">
+              <div class="hamburger-box">
+                <div class="hamburger-inner"></div>
+              </div>
             </div>
           </div>
-          <div class="header__wrapper-right"><a class="header__btn header__btn-pre" href="#" title="">pre-register</a><a class="header__btn header__btn-login" href="#" title="">Log in</a></div>
+          <div class="header__wrapper-mobile" mobile-block-js>
+            <div class="header__wrapper-middle">
+              <div class="nav nav--header">
+                <ul class="nav__list">
+                  <li class="nav__list-item"><a class="nav__list-btn" href="/" title="">Home</a></li>
+                  <li class="nav__list-item"><a class="nav__list-btn" href="do.html" title="">What we do</a></li>
+                  <li class="nav__list-item"><a class="nav__list-btn" href="are.html" title="">Who we are</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="header__wrapper-right"><a class="header__btn header__btn-pre" href="#" title="">pre-register</a><a class="header__btn header__btn-login" href="#" title="">Log in</a></div>
+          </div>
         </div>
       </div>
     </header>
@@ -148,6 +155,13 @@
               </svg></a>
           </div>
           <div class="footer__wrapper-right">
+            <div class="nav nav--footer">
+              <ul class="nav__list">
+                <li class="nav__list-item"><a class="nav__list-btn" href="/" title="">Home</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="do.html" title="">What we do</a></li>
+                <li class="nav__list-item"><a class="nav__list-btn" href="are.html" title="">Who we are</a></li>
+              </ul>
+            </div>
             <div class="subscribe">
               <div class="subscribe__form">
                 <div class="subscribe__form-icon"><i class="icon-font icon-subscribe"></i></div>
@@ -160,7 +174,7 @@
         <div class="footer__wrapper footer__wrapper-1">
           <div class="footer__wrapper-left">
             <div class="copyright">
-              <p>© 2019 Outsmart Insights Ltd | <a href='#'>Privacy Notice</a></p>
+              <p>© 2019 Outsmart Insights Ltd <span>|</span> <a href='#'>Privacy Notice</a></p>
             </div>
           </div>
           <div class="footer__wrapper-right">
