--- a/dest/are.html
+++ b/dest/are.html
@@ -384,6 +384,7 @@
                 </div>
               </div>
               <div class="work__row-right">
+                <h2 class="work__title work__title-1 c-title">WORK, ONLINE, <span class='c-title--color'>ANYTIME</span></h2>
                 <div class="work__img work__img-0"></div>
               </div>
             </div>
