--- a/dest/index.html
+++ b/dest/index.html
@@ -157,31 +157,7 @@
         </div>
       </section>
       <!-- SECTION info :: END-->
-      <!-- SECTION advantages :: START-->
-      <section class="advantages" id="advantages">
-        <div class="c-grid">
-          <div class="advantages__wrapper">
-            <div class="advantages__block-wrapper">
-              <div class="advantages__block advantages__block-0">
-                <p class="advantages__block-count viewport-hide-js"><span data-from="0" data-to="100" data-speed="1500" data-refresh-interval="50" advantages-num-js>100</span>&nbsp;+
-                </p>
-                <p class="advantages__block-desc">Projects</p>
-              </div>
-              <div class="advantages__block advantages__block-1">
-                <p class="advantages__block-count viewport-hide-js"><span data-from="100" data-to="1000" data-speed="1500" data-refresh-interval="50" advantages-num-js>1000</span>&nbsp;+
-                </p>
-                <p class="advantages__block-desc">Scientists</p>
-              </div>
-              <div class="advantages__block advantages__block-2">
-                <p class="advantages__block-count viewport-hide-js"><span data-from="1000" data-to="100000" data-speed="1500" data-refresh-interval="50" advantages-num-js>100000</span>&nbsp;+
-                </p>
-                <p class="advantages__block-desc">Freelance hours</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- SECTION advantages :: END-->
+      <!--include components/home/_advantages-->
       <!-- SECTION pre :: START-->
       <section class="pre" id="pre">
         <div class="c-grid">
